fix: back to top not invisible when load page

--- a/css/backtotop.css
+++ b/css/backtotop.css
@@ -10,6 +10,7 @@
     border: 1px solid transparent;
     border-radius: 50%;
     text-align: center;
+    display: none;
 }
 
 .backToTop button {
